<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:contentPadding="5dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="#AA8C6E"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/profileLayout"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:id="@+id/uPicture"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/ImageStyle_Circle"
                android:src="@drawable/ic_displaypic"

                android:background="@color/black"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/uNameTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/pLocationTv"
                    android:text="@string/location"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:autoLink="all"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/pTimeTv"
                    android:text="@string/_33mins"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </LinearLayout>
            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@null"
                android:id="@+id/moreBtn"
                android:src="@drawable/ic_more"
                android:contentDescription="@string/todo" />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pTitleTv"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:autoLink="all"
            android:text="@string/title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:id="@+id/pDescriptionTv"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="8dp"
            android:text="@string/description"/>
        <ImageView
            android:id="@+id/postImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/white"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/pLikesTv"
            android:text="@string/_1_2k_likes"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F5F0F0"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:layout_width="0dp"
                android:id="@+id/likeBtn"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/like"
                android:drawableStart="@drawable/ic_like"
                android:drawablePadding="5dp"
                android:background="#F5F0F0"/>
            <Button
                android:layout_width="0dp"
                android:id="@+id/commentBtn"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_comment"
                android:text="@string/comment"
                android:background="#F5F0F0"/>
            <Button
                android:id="@+id/shareBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_share"
                android:text="@string/share"
                android:background="#F5F0F0"/>

        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>