<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="3dp"
    app:contentPadding="5dp"
    app:cardBackgroundColor="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/dpcomment"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_displaypic"
            android:layout_width="50dp"
            app:shapeAppearanceOverlay="@style/ImageStyle_Circle"
            android:layout_height="50dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/nameCmt"
            android:layout_toEndOf="@id/dpcomment"
            android:text="@string/name"
            android:textColor="@color/black"
            android:layout_marginBottom="2dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/commentTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_below="@id/nameCmt"
            android:layout_toEndOf="@id/dpcomment"
            android:text="@string/this_is_actual_comment"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/timeTv"
            android:text="@string/_12_06_2019"
            android:layout_below="@id/commentTv"
            android:layout_toEndOf="@id/dpcomment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>